--- a/static/HTML/chat-box.html
+++ b/static/HTML/chat-box.html
@@ -10,13 +10,12 @@
   </div>
 
   <!-- Note that the index.css file is available by using 'express.static' function in server.js -->
-  <link rel="stylesheet" type="text/css" href="static/chat-box.css">
+  <link rel="stylesheet" type="text/css" href="/static/CSS/chat-box.css">
 
   <!-- Load javascript codes -->
   <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
-  <script id=static_src_example src="static/hello_world.js"></script>
 </head>
 
 <body>
@@ -38,7 +37,7 @@
     </form>
 
 
-    <script id=client_script src="static/client.js"></script>
+    <script id=client_script src="/static/JAVASCRIPT/chat-box-client.js"></script>
 </body>
 
 </html>
