--- a/static/HTML/home.html
+++ b/static/HTML/home.html
@@ -70,7 +70,7 @@
                         <a href="/about">ABOUT</a>
                     </form>
                 </li> 
-                <li><a href="#">PROFILE</a></li>
+                <li><a href="/profile">PROFILE</a></li>
                 <!-- <li><a href="/profile">PROFILE</a></li> -->
             </ol>
 
