fixed snake game

--- a/static/HTML/about.html
+++ b/static/HTML/about.html
@@ -30,7 +30,7 @@
       <div class="wrapper">
         <div class="search_box search-input" id="bar-border">
           <a href="" hidden></a>
-          <input id="in" type="text" placeholder="Search Games here ...">
+          <input id="in" type="text" placeholder="Search Games & click search icon">
 
           <div class="autocom-box">
           </div>
