--- a/static/HTML/index.html
+++ b/static/HTML/index.html
@@ -32,7 +32,7 @@
             <div class="wrapper">
                 <div class="search_box search-input" id="bar-border">
                     <a href="" hidden></a>
-                    <input id="in" type="text" placeholder="Search Games here ...">
+                    <input id="in" type="text" placeholder="Search Games & click search icon">
 
                     <div class="autocom-box">
                     </div>
@@ -136,8 +136,8 @@
                     <img class="img" src="/static/PHOTOS/GAME-IMAGES/mk.jpg" alt="">
                 </li>
                 <li class="ul-li">
-                    <a class="ul-li-a" href="/static/WEB-GAMES/MINI-MILITIA/index.html">MINI MILITIA</a>
-                    <img class="img" src="/static/PHOTOS/GAME-IMAGES/mini.jpg" alt="">
+                    <a class="ul-li-a" href="/snake-game">SNAKE GAME</a>
+                    <img class="img" src="/static/PHOTOS/CATEGORIES/Snake-game.png" alt="">
                 </li>
             </ul>
         </section>
