--- a/static/HTML/snake.html
+++ b/static/HTML/snake.html
@@ -52,6 +52,6 @@
   </section>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-  <script src="index.js"></script>
+  <script src="/static/JAVASCRIPT/snake.js"></script>
 </body>
 </html>
